--- a/main.css
+++ b/main.css
@@ -1,11 +1,12 @@
 header {
-	background-color: green;
+
 }
 
 header nav {
 	display: flex;
 	justify-content: flex-end;
 	padding: 30px;
+
 
 }
 
@@ -15,5 +16,13 @@ header p {
 
 header h1 {
 	padding: 15px;
+
 	
+}
+
+.jumbotron {
+	display: flex;
+	align-items: center;
+	background-image: url('http://94.136.40.103/~breezyknees.co.uk/wp-content/uploads/2014/11/garden-july14-0821.jpg')
+	background-size: cover;
 }
