--- a/main.css
+++ b/main.css
@@ -6,8 +6,6 @@ header nav {
 	display: flex;
 	justify-content: flex-end;
 	padding: 30px;
-
-
 }
 
 header p {
@@ -27,4 +25,9 @@ header h1 {
 	background-size: cover;
 	height: 500px;
 	color: white;
+}
+
+section .row img {
+  margin: 0 0 30px;
+  width: 100%;
 }
