--- a/main.css
+++ b/main.css
@@ -25,14 +25,14 @@ header .row form {
 	
 }
 
-header .row form .input[type=text] {
-    width: 130px;
+header .row form .input[type=search] {
+    width: 100px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
 
-header .row form input[type=text]:focus {
-    width: 100%;
+header .row form input[type=search]:focus {
+    width: 80%;
 }
 
 nav ul {
