--- a/wishlist.css
+++ b/wishlist.css
@@ -178,7 +178,12 @@ p{
 	text-align: center;
 }
 
-form ul {
+section .row img {
+	  margin: 0 0 30px;
+	  width: 100%;
+}
+
+section .row{
   margin: 0 0 10px 0;
   padding: 10px;
   list-style: none;
@@ -188,14 +193,9 @@ form ul {
   border-radius: 1px;    
 }
 
-form li {
-	  display: block;
-  padding: 10px 5px 2px 5px;
-  margin: 0 5px 0 0;
+section .row p {
+	text-align:left;
+
 }
-
-
-
-
 
 
