completed all html and basic css (only one thing I want to fix and thats the image sizes on the homepage) alongside having all links lead to correct pages included hard coded products

--- a/registration.css
+++ b/registration.css
@@ -189,11 +189,29 @@ form ul {
 }
 
 form li {
-	  display: block;
+  display: block;
   padding: 10px 5px 2px 5px;
   margin: 0 5px 0 0;
 }
 
+footer {
+  font-size: 12px;
+  padding: 20px 0;
+}
+
+footer .col-sm-8 {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer ul {
+  list-style: none;
+}
+
+footer li img {
+  width: 32px;
+  height: 32px;
+}
 
 
 
