--- a/main.css
+++ b/main.css
@@ -203,3 +203,21 @@ footer li img {
   width: 32px;
   height: 32px;
 }
+
+#DepartmentList ul{
+  text-align: center;	
+  margin: 0 0 10px 0;
+  padding: 10px;
+  list-style: none;
+  position: relative;
+  background: #eee;
+  border-bottom: 1px solid #fff;
+  border-radius: 1px;    
+}
+
+#DepartmentList li {
+  display: block;
+  padding: 10px 5px 2px 5px;
+  margin: 0 5px 0 0;
+}
+}
