--- a/wishlist.css
+++ b/wishlist.css
@@ -198,4 +198,27 @@ section .row p {
 
 }
 
+footer {
+  font-size: 12px;
+  padding: 20px 0;
+}
+
+footer .col-sm-8 {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer ul {
+  list-style: none;
+}
+
+footer li img {
+  width: 32px;
+  height: 32px;
+}
+
+body h1 {
+	text-align: center;
+}
+
 
