--- a/main.css
+++ b/main.css
@@ -180,11 +180,16 @@ nav li #login-content {
 	color: white;
 }
 
-section .row img { 
+section .row .thumbnail{ 
   margin: 0 0 30px;
-  width: 100%;
+  width: 400px;
+  height:400px;
 }
+section .row .thumbnail img{ 
 
+  width: 390px;
+  height:390px;
+}
 footer {
   font-size: 12px;
   padding: 20px 0;
