--- a/wishlist.css
+++ b/wishlist.css
@@ -28,13 +28,13 @@ header .row form {
 	
 }
 
-header .row form .input[type=search] {
+header .row form .input[type=text] {
     width: 130px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
 
-header .row form input[type=search]:focus {
+header .row form input[type=text]:focus {
     width: 80%;
 }
 
