--- a/main.css
+++ b/main.css
@@ -182,13 +182,13 @@ nav li #login-content {
 
 section .row .thumbnail{ 
   margin: 0 0 30px;
-  width: 400px;
-  height:400px;
+  width: 550px;
+  height:550px;
 }
 section .row .thumbnail img{ 
 
-  width: 390px;
-  height:390px;
+  width: 540px;
+  height:540px;
 }
 footer {
   font-size: 12px;
@@ -224,4 +224,8 @@ footer li img {
   display: block;
   padding: 10px 5px 2px 5px;
   margin: 0 5px 0 0;
+}
+
+#thumbnails p {
+  font-size: 150%;	
 }
